fixed bug in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-
-  "name": "Roast-Bot",
+  "name": "roast-bot",
 
   "description": "A bot to roast the living hell out of people on discord",
 
