--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "roast-bot",
 
-  "description": "A bot to roast the living hell out of people on discord",
+  "description": "A bot to roast people on discord",
 
   "version": "1.0.02",
 
