--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node bot.js"
   },
   "dependencies": {
-    "discord.js": "11.3.2",
+    "discord.js": "^11.3.2",
+    "quick.db": "^6.3.2",
     "request": "2.81.0",
-    "weather-js": "^2.0.0"
   }
 }
