--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   "dependencies": {
     "discord.js": "^11.3.2",
     "quick.db": "^6.3.2",
-    "request": "2.81.0",
+    "request": "2.81.0"
   }
 }
