--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "enmap-sqlite": "^2.0.3",
     "querystring": "^0.2.0",
     "quick.db": "^6.3.2",
+    "quick.log": "^1.2.1",
+    "quick.log-discord": "^1.1.0",
+    "relevant-urban": "^2.0.0",
     "request": "2.81.0",
     "sequelize": "^4.38.0",
     "snekfetch": "^4.0.4",
