--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "snekfetch": "^4.0.4",
     "sqlite3": "^4.0.2",
     "urban": "^0.3.1",
-    "mongolab-data-api": "^1.1.6"
+    "mongolab-data-api": "^1.1.6",
+    "mongodb": "^3.1.3",
+    "mongoose": "^5.2.9"
   },
   "devDependencies": {},
   "repository": {
