--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "urban": "^0.3.1",
     "mongolab-data-api": "^1.1.6",
     "mongodb": "^3.1.3",
-    "mongoose": "^5.2.9"
+    "mongoose": "^5.2.9",
+    "redis": "^2.8.0"
   },
   "devDependencies": {},
   "repository": {
