--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mongolab-data-api": "^1.1.6",
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.9",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "mysql": "^2.16.0"
     
   },
   "devDependencies": {},
