--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cheerio": "^1.0.0-rc.2",
     "discord.js": "^11.3.2",
     "enmap": "^3.0.2",
+    "express": "^4.16.3",
     "enmap-sqlite": "^2.0.3",
     "enmap-mongo": "^2.0.2",
     "klasa": "^0.4.0",
@@ -27,8 +28,8 @@
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.9",
     "redis": "^2.8.0",
-    "mysql": "^2.16.0"
-    
+    "mysql": "^2.16.0",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {},
   "repository": {
