--- a/package.json
+++ b/package.json
@@ -7,29 +7,30 @@
     "start": "node main.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "discord.js": "^11.3.2",
     "enmap": "^3.0.2",
-    "express": "^4.16.3",
-    "enmap-sqlite": "^2.0.3",
     "enmap-mongo": "^2.0.2",
+    "enmap-sqlite": "^2.0.3",
+    "express": "^4.16.3",
     "klasa": "^0.4.0",
+    "mongodb": "^3.1.3",
+    "mongolab-data-api": "^1.1.6",
+    "mongoose": "^5.2.9",
+    "morgan": "^1.9.0",
+    "mysql": "^2.16.0",
     "querystring": "^0.2.0",
     "quick.db": "^6.3.2",
     "quick.log": "^1.2.1",
     "quick.log-discord": "^1.1.0",
+    "redis": "^2.8.0",
     "relevant-urban": "^2.0.0",
     "request": "2.81.0",
     "sequelize": "^4.38.0",
     "snekfetch": "^4.0.4",
     "sqlite3": "^4.0.2",
-    "urban": "^0.3.1",
-    "mongolab-data-api": "^1.1.6",
-    "mongodb": "^3.1.3",
-    "mongoose": "^5.2.9",
-    "redis": "^2.8.0",
-    "mysql": "^2.16.0",
-    "morgan": "^1.9.0"
+    "urban": "^0.3.1"
   },
   "devDependencies": {},
   "repository": {
