--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "mongolab-data-api": "^1.1.6",
     "mongoose": "^5.2.9",
     "morgan": "^1.9.0",
+    "msnodesql": "^0.2.1",
+    "mssql": "^4.1.0",
     "mysql": "^2.16.0",
+    "node-mssql": "0.0.1",
     "querystring": "^0.2.0",
     "quick.db": "^6.3.2",
     "quick.log": "^1.2.1",
