--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "sequelize": "^4.38.0",
     "snekfetch": "^4.0.4",
     "sqlite3": "^4.0.2",
-    "urban": "^0.3.1"
+    "urban": "^0.3.1",
+    "node": "^8.11.3"
   },
   "devDependencies": {},
   "repository": {
