--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node main.js"
   },
   "engines": {
-    "node": "^8.11.3"
+    "node": "^8.11.3",
+    "npm": "^5.6.0"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
