--- a/package.json
+++ b/package.json
@@ -11,34 +11,9 @@
     "npm": "^5.6.0"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "cheerio": "^1.0.0-rc.2",
     "discord.js": "^11.3.2",
-    "enmap": "^3.0.2",
-    "enmap-mongo": "^2.0.2",
-    "enmap-sqlite": "^2.0.3",
-    "express": "^4.16.3",
-    "klasa": "^0.4.0",
-    "mongodb": "^3.1.3",
-    "mongolab-data-api": "^1.1.6",
-    "mongoose": "^5.2.9",
-    "morgan": "^1.9.0",
-    "msnodesql": "^0.2.1",
-    "mssql": "^4.1.0",
-    "mysql": "^2.16.0",
-    "node-mssql": "0.0.1",
-    "pg": "^7.4.3",
-    "querystring": "^0.2.0",
-    "quick.db": "^6.3.2",
-    "quick.log": "^1.2.1",
-    "quick.log-discord": "^1.1.0",
-    "redis": "^2.8.0",
     "relevant-urban": "^2.0.0",
-    "request": "2.81.0",
-    "sequelize": "^4.38.0",
-    "snekfetch": "^4.0.4",
-    "sqlite3": "^4.0.2",
-    "urban": "^0.3.1"
+    "request": "2.81.0"
   },
   "devDependencies": {},
   "repository": {
