--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "start": "node main.js"
   },
   "engines": {
-    "node": "^8.11.3",
+    "node": "8.11.4",
     "npm": "^5.6.0"
   },
   "dependencies": {
-    "cassandra-driver": "^3.5.0",
-    "discord.js": "^11.3.2",
+    "discord.js": "^11.4.2",
+    "enmap": "^4.2.0",
+    "node": "8.11.4",
     "relevant-urban": "^2.0.0",
     "request": "2.81.0",
-    "node": "^10.9.0"
+    "better-sqlite-pool": "^0.1.2"
   },
   "devDependencies": {},
   "repository": {
