--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "better-sqlite-pool": "^0.1.2",
     "discord.js": "^11.4.2",
     "enmap": "^4.2.0",
+    "mysql": "^2.16.0",
     "node": "8.11.4",
     "node-gyp": "^3.8.0",
     "relevant-urban": "^2.0.0",
